[package]
name = "repairman29_chump-chassis"
version = "0.1.0"
edition = "2024"

name = "repairman29_chump-chassis"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.6.14", features = ["routing", "reexport"] }
tower-http = { version = "0.3.3", features = ["cors", "trace"] }
sqlx = { version = "0.7.7", features = ["sqlite", "runtime-tokio-native-tls"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.92"
