[package]
name = "repairman29_chump-chassis"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.8"
serde = "1.0.228"
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "net"] }
tower-http = "0.6.8"
