[package]
workspace = { path = "/Users/jeffadkins/Projects/Chump/Cargo.toml" }
name = "repairman29_chump-chassis"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.6.14"
serde = "1.0.228"
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.50.0", features = ["full"] }
tower-http = "0.6.8"
